convert config Model to save multiple vm
