# src/server/routes.ts
@@ -44,6 +44,7 @@ const models: TsoaRoute.Models = {
             "diskUsagePercent": {"dataType":"string"},
             "macAddress": {"dataType":"string"},
             "ipAddress": {"dataType":"string"},
+            "port": {"dataType":"union","subSchemas":[{"dataType":"string"},{"dataType":"double"}]},
         },
         "additionalProperties": false,
     },
@@ -62,6 +63,7 @@ const models: TsoaRoute.Models = {
             "createdAt": {"dataType":"double"},
             "outLogPath": {"dataType":"string"},
             "errLogPath": {"dataType":"string"},
+            "restarts": {"dataType":"double"},
         },
         "additionalProperties": false,
     },
